@@ -611,7 +611,6 @@ void AGE_Frame::OnKillFocus_Sounds(wxFocusEvent &event)
     ListSoundItems();
 }
 
-#ifndef _MSC_VER
 void echo(sf::SoundBuffer &waves, sf::Sound &speaker, bool loop)
 {
     if(waves.getSampleCount())
@@ -621,7 +620,6 @@ void echo(sf::SoundBuffer &waves, sf::Sound &speaker, bool loop)
         speaker.setLoop(loop);
     }
 }
-#endif
 
 void AGE_Frame::playWAV(wxCommandEvent &event)
 {
@@ -629,7 +627,6 @@ void AGE_Frame::playWAV(wxCommandEvent &event)
     Sounds_Items_ListV->SetFocus();
     else Sounds_Sounds_ListV->SetFocus();
 
-#ifndef _MSC_VER
     if(event.GetId() == SoundFile_Stop->GetId())
     {
         speaker.stop();
@@ -668,7 +665,6 @@ void AGE_Frame::playWAV(wxCommandEvent &event)
         }
         wxMessageBox("No such sound");
     }
-#endif
 }
 
 void AGE_Frame::autoOdds(wxCommandEvent &event)
